Fix dark mode error on blog posts page

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -1153,7 +1153,6 @@ footer .input-area .submit-btn {
 }
 
 .darkmode--activated .all-comment{
-	mix-blend-mode: difference !important;
 	background: #000;
 }
 .slider {
